# LongParser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  license-check.yml
docs/: changelog.md  contributing.md  index.md  security.md
docs/api/: endpoints.md  overview.md
docs/deployment/: docker.md  environment.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: chat.md  chunking.md  hitl.md  indexing.md  parsing.md
docs/integrations/: langchain.md  llamaindex.md  vector-stores.md
docs/reference/: chunkers.md  extractors.md  pipeline.md  schemas.md
src/longparser/: __init__.py  schemas.py
src/longparser/chunkers/: hybrid_chunker.py  quality_scorer.py  semantic_boundary.py
src/longparser/extractors/: docling_extractor.py  marker_extractor.py
src/longparser/pipeline/: __init__.py  cross_reference.py  orchestrator.py  pii_redactor.py  summary_enricher.py
src/longparser/server/: app.py  embeddings.py  worker.py
src/longparser/server/chat/: engine.py  graph.py  llm_chain.py  schemas.py
tests/unit/: test_chat_utils.py  test_llm_chain.py
